# Lucys-cookBook

./: .gitignore  bun.lockb  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json
.github/workflows/: deploy-backend.yaml
app/: actions.ts  layout.tsx  page.tsx
app/components/: Card.tsx  DisplayRecipesCards.tsx  Filters.tsx  Form.tsx  Header.tsx  Randomiser.tsx  Search.tsx  Select.tsx  UploadButton.tsx  editRecipe.tsx  table.tsx
app/functions/: data.ts
app/recipe/: page.tsx
app/recipe/[slug]/: page.tsx
app/src/utils/: uploadthing.ts
app/types/: receipe.ts
backend/: Cargo.toml  Dockerfile  docker-compose.yaml
backend/src/: main.rs
backend/src/api/: mod.rs  preview_recipe.rs  recipe.rs
backend/src/handlers/: open_ai.rs
backend/src/models/: preview_recipe.rs  recipe.rs
backend/src/repository/: postgres.rs
lib/: prisma.ts
prisma/: schema.prisma
src/: actions.ts  middleware.ts
src/app/: layout.tsx  loading.tsx  page.tsx
src/app/[userId]/: page.tsx
src/app/_data/: user.ts
src/app/api/: recipe_review.ts
src/app/recipe/: page.tsx
src/components/: DisplayRecipesCards.tsx  EditRecipe.tsx  Form.tsx  Header.tsx  Hero.tsx  InfiniteScrollRecipes.tsx  Randomiser.tsx  Search.tsx  UploadButton.tsx  home-page.tsx  recipe.tsx  recipeCard.tsx  sidebar-extras.tsx  sidebar.tsx
src/components/ui/: Form.tsx  avatar.tsx  button.tsx  card.tsx  checkbox.tsx  input.tsx  (+7 more)
src/functions/: data.ts  recipes.ts
src/hooks/: useIngredientSections.ts
src/types/: recipe.ts  recipeTypes.ts
src/utils/: auth.ts  prisma.ts
(+16 files in other folders)
