cargo-features = ["edition2021"]
[package]
name = "backend"
version = "0.1.0"
edition = "2021"  

[dependencies]
actix-web = "4.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1.38.0", features = ["full"] }
tokio-postgres = "0.7.10"
env_logger = "0.11.3"
log = "0.4.21"
postgres = "0.19.7"
dotenv = "0.15"
uuid = {version = "1.8.0", features = ["v4", "serde"]}

[[bin]]
name = "backend"
path = "src/main.rs"
